--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,24 +1,51 @@
 header {
-  background-color: #2b1dc3;
-  width: 100%;
-  margin-top: 0;
-  padding: 10px;
-  box-sizing: border-box;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #007bff;
+  border-bottom: 1px solid #dee2e6;
 }
-form {
-  position: relative;
-  display: inline-block;
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-input {
-  width: 250px;
-  padding: 5px 5px 5px 30px;
-}
-.searchBtn {
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  transform: translate(-50% -50%);
+
+.input {
+  height: 40px;
+  max-width: 400px;
+  padding: 12px 16px;
   border: none;
-  background-color: transparent;
-  padding: 0;
+  border-left: none;
+  border-radius: 0 10px 10px 0;
+  font-size: 16px;
+  flex: 1;
+  margin-right: 8px;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.button {
+  height: 40px;
+  padding: 5px;
+  background-color: #fff;
+  color: #fff;
+  border: none;
+  border-radius: 10px 0 0 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.icon {
+  width: 25px;
+  height: 25px;
+  transition: width 0.3s ease;
+  transition: height 0.3s ease;
+}
+
+.icon:hover {
+  width: 30px;
+  height: 30px;
 }
